--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@typescript-eslint/parser": "^5.38.0",
     "eslint-plugin-react": "^7.31.8",
     "prettier": "2.7.1",
+    "sass": "^1.55.0",
     "typescript": "^4.8.3"
   }
 }
